--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,16 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Responsive Web Design</title>
+		<link rel="stylesheet" href="/src/styles/global.css">
 	</head>
 	<body>
-		<h1>Astro</h1>
-	</body>
+        <div class="card">
+            <h1>Nisl suscipit adipiscing bibendum est ultricies integer quis auctor.</h1>
+            <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
+            <p class="links">
+                <a href="#">contact me</a> <a href="#">learn more about me</a>
+            </p>
+        </div>
+    </body>
 </html>
