--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,17 +7,21 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Responsive Web Design</title>
-		<link rel="stylesheet" href="/src/styles/global.css">
+		<title>Blog about Responsive Web Design</title>
+		<link rel="stylesheet" href="/src/styles/blog.css">
 	</head>
 	<body>
-        <div class="card">
-            <h1>Nisl suscipit adipiscing bibendum est ultricies integer quis auctor.</h1>
+	<header><h1>An Awesome Blog</h1></header>
+	<main>
+	<h2>An awesome blog post</h2>
+	<p class="feature">
+	<img src="/feature.png" alt="something magical">
+	</p>
             <p>Netus et malesuada fames ac. <b>Sed cras ornare arcu dui vivamus.</b> Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
             <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. <span class="accent-color">Elementum integer enim neque</span> volutpat ac tincidunt vitae semper.</p>
             <p class="links">
-                <a href="blog">my blog</a> <a href="#">contact me</a> <a href="#">learn more about me</a>
+            <a href="#">Read more...</a>
             </p>
-        </div>
+        </main>
     </body>
 </html>
