--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@
 	<body>
         <div class="card">
             <h1>Nisl suscipit adipiscing bibendum est ultricies integer quis auctor.</h1>
-            <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
+            <p>Netus et malesuada fames ac. <b>Sed cras ornare arcu dui vivamus.</b> Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
+            <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. <span class="accent-color">Elementum integer enim neque</span> volutpat ac tincidunt vitae semper.</p>
             <p class="links">
                 <a href="#">contact me</a> <a href="#">learn more about me</a>
             </p>
