--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@
             <p>Netus et malesuada fames ac. <b>Sed cras ornare arcu dui vivamus.</b> Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
             <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. <span class="accent-color">Elementum integer enim neque</span> volutpat ac tincidunt vitae semper.</p>
             <p class="links">
-                <a href="blog">my blog</a> <a href="#">contact me</a> <a href="#">learn more about me</a>
+                <a href="blog">my blog</a> <a class="btn" href="#">contact me</a> <a class="btn" href="#">learn more about me</a>
             </p>
         </div>
     </body>
