redo phase 3 from memory

--- a/src/pages/b4.astro
+++ b/src/pages/b4.astro
@@ -1,7 +1,6 @@
 ---
 
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -9,13 +8,13 @@
 		<meta name="viewport" content="width=device-width" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 		<title>Responsive Web Design</title>
-		<link rel="stylesheet" href="/src/styles/b3.css">
+		<link rel="stylesheet" href="/src/styles/b4.css">
 	</head>
 	<body>
 <main>
-<header>
+<header class="dark">
 <div class="container">
 <h1>CSS is a lot of fun
 </h1>
