--- a/src/styles/b3.css
+++ b/src/styles/b3.css
@@ -4,26 +4,24 @@
 	--color-high: #ffffff;
 }
 
-
 html {
   font-family: "Lato", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
-body{
-	margin:0;
-}
+body,
 main{
+	margin:0;
+	width:100%;
+}
+.container{
+	width: 620px;
 	margin:0 auto;
-	width:620px;
-	border: 1px solid var(--color-low);
 }
-main > *{
-	padding: 2rem;
-
-}
+header,
 section > * {
 	margin-top:0;
+	padding:2rem;
 }
 section > *:last-child {
 	margin-bottom:0;
@@ -73,10 +71,6 @@ header,.dark{
 	font-weight: 600;
 	display: inline-block;
 	cursor: pointer;
-}
-a:hover,
-a:focus{
-	background: filter(80%);
 }
 .frame{
 	overflow: hidden;
