create links to each layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,10 @@
             <p>Netus et malesuada fames ac. <b>Sed cras ornare arcu dui vivamus.</b> Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
             <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. <span class="accent-color">Elementum integer enim neque</span> volutpat ac tincidunt vitae semper.</p>
             <p class="links">
-                <a href="blog">my blog</a> 
-                <a href="b3">new blog</a> 
-		<a class="btn" href="#">contact me</a>
-		 <a class="btn" href="#">learn more about me</a>
+                <a href="blog">blog</a> 
+                <a href="b3">blog 3</a> 
+                <a href="b4">blog 4</a> 
+                <a href="b5">blog 5</a> 
             </p>
         </div>
     </body>
